# b

./: .replit  adiseware.db  ai_helper.py  app.py  auth.py  database.py  pyproject.toml  replit.md  requirements.txt  seed_data.py
attached_assets/: index_1761722108479.html
pages/: __init__.py  admin_dashboard.py  agrovet_dashboard.py  agrovet_orders.py  ai_assistant.py  all_orders.py  all_products.py  analytics.py  community.py  crm.py  disease_detection.py  farmer_dashboard.py  home.py  inventory.py  login.py  marketplace.py  my_orders.py  pos_system.py  register.py  system_analytics.py  user_management.py  weather.py
